<resources>
    <string name="app_name">Pide Tu Comida</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_empresa">Empresa</string>
    <string name="menu_ubicacion">Ubicación</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_desarrolladores">Desarrolladores</string>
    <string name="menu_platos">Carta de platos</string>
    <string name="menu_bebidas">Carta de bebidas</string>
    <string name="menu_ofertas">Ofertas</string>
    <string name="menu_carrito">Compras de productos</string>
    <string name="platos">platos</string>
    <string name="bebidas">Bebidas</string>
    <string name="ofertas">Ofertas</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_mapa">Ubicacion</string>
</resources>