<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="proyecto.pidetucomida.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_platos"
        android:name="proyecto.pidetucomida.ui.platos.PlatosFragment"
        android:label="@string/menu_platos"
        tools:layout="@layout/fragment_platos" />
    <fragment
        android:id="@+id/nav_bebidas"
        android:name="proyecto.pidetucomida.ui.bebidas.BebidasFragment"
        android:label="@string/menu_bebidas"
        tools:layout="@layout/fragment_bebidas" />
    <fragment
        android:id="@+id/nav_ofertas"
        android:name="proyecto.pidetucomida.ui.ofertas.OfertasFragment"
        android:label="@string/menu_ofertas"
        tools:layout="@layout/fragment_ofertas" />
    <fragment
        android:id="@+id/nav_carrito"
        android:name="proyecto.pidetucomida.ui.carrito.CarritoFragment"
        android:label="@string/menu_carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="proyecto.pidetucomida.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="proyecto.pidetucomida.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>